# smart-fasal-kisan-alert

./: .env.example  .gitignore  .gitleaksignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  README.md  TECH_USED.md  compose.yaml  eslint.config.mjs  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  security.yml  sonar.yml
apps/device-ingest/: package.json
apps/device-ingest/src/: app.test.ts  app.ts  config.ts  index.ts
apps/domain-api/: package.json
apps/domain-worker/: package.json
apps/farmer-web/: .gitignore  package.json  proxy.ts
apps/intelligence-service/: package.json  pyproject.toml
apps/intelligence-service/src/intelligence_service/: __init__.py  __main__.py  main.py
apps/intelligence-service/tests/: test_health.py
apps/media-scanner/: package.json  tsconfig.build.json
apps/mp-query-api/: package.json
apps/mp-web/: package.json  proxy.ts  tsconfig.json
apps/privacy-pipeline/: package.json
apps/provider-callback-ingest/: package.json
apps/rsk-web/: eslint.config.mjs  next.config.ts  package.json  proxy.ts
apps/voice-gateway/: package.json
docs/: 01_PRD.md  02_INFORMATION_ARCHITECTURE.md  03_END_TO_END_FLOWS.md  04_FEATURE_SPECIFICATIONS.md  05_TECHNICAL_ARCHITECTURE.md  06_DATA_MODEL_AND_EVENT_CATALOG.md  07_API_AND_INTEGRATION_SPECIFICATION.md  08_AI_ML_AND_AGRONOMY_SPECIFICATION.md  09_UI_DESIGN_SYSTEM_AND_WIREFRAMES.md  10_SECURITY_PRIVACY_TESTING_AND_QUALITY_SPECIFICATION.md  11_IMPLEMENTATION_SEQUENCE_AND_DEMO_JOURNEY.md
evaluation/: raigad-advisory-m6-v1.json  raigad-recommendation-m5-v1.json
infra/terraform/: README.md
public/: index.html  styles.css
tests/e2e/: authenticated-shells.spec.ts  farmer-advisory-flow.spec.ts  foundation.spec.ts  origins.ts
tests/integration/: architecture-mp-rules.test.ts  health-contract.test.ts  next-config.test.ts  next-csp.test.ts
tooling/: next-config.d.mts  next-config.mjs  next-csp.d.mts  next-csp.mjs
tooling/architecture/: check.mjs  mp-rules.d.mts  mp-rules.mjs
tooling/scripts/: build-legacy.mjs
(+159 files in other folders)
